# idlhub

./: .env.example  .gitignore  .netlifyignore  404.html  ADVANCED_METRICS_IMPLEMENTATION.md  AUDIT_REPORT.md  AUDIT_RESPONSE.md  Anchor.toml  BOUNTY_SYSTEM.md  CLAUDE.md  CNAME  DEPLOYMENT_COMPLETE.md  DEPLOY_MCP.md  E2E_CI_STATUS.md  E2E_FINAL_STATUS.md  E2E_REVIEW.md  E2E_TESTS_SUMMARY.md  HOSTING.md  INSTALL.md  INTEGRATION_COMPLETE.md  MARKET_TYPES.md  METRICS_API_STATUS.md  NETLIFY.md  PROTOCOL.md  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_FULL.md  SECURITY_FIXES_V2.md  SECURITY_STATUS.md  SELF_ROAST.md  TEST_EXECUTION_SUMMARY.md  TEST_VALIDATION.md  WHITEPAPER.md  app.html  check-badges.js  check-performance.js  check-rate-values.js  check-table.js  docs.html  ecosystem.config.cjs  (+26 more)
IDLs/: acceleraytorIDL.json  adrenaIDL.json  aldrinIDL.json  apricotIDL.json  arrowIDL.json  atrixIDL.json  balansolIDL.json  belugaIDL.json  blazeIDL.json  bonfidaIDL.json  byrealIDL.json  cashioIDL.json  cloneIDL.json  crateIDL.json  cremaIDL.json  cropperIDL.json  cyclosIDL.json  cykuraIDL.json  deltaoneIDL.json  dexlabIDL.json  dexterityIDL.json  driftIDL.json  ellipsisIDL.json  enjinstarterIDL.json  flashIDL.json  fluxbeamIDL.json  franciumIDL.json  gaugeIDL.json  gavelIDL.json  gmxIDL.json  gokiIDL.json  goonfiIDL.json  goosefxIDL.json  hawksightIDL.json  hubbleIDL.json  humidifiIDL.json  hxroIDL.json  jetIDL.json  (+68 more)
programs/idl-protocol/: Cargo.toml
programs/idl-protocol/src/: lib.rs  lib_secure.rs
programs/idl-stableswap/: Cargo.toml
programs/idl-stableswap/src/: lib.rs
(+218 files in other folders)
