[package]
name = "idl-protocol"
version = "0.1.0"
description = "$IDL Token Protocol - Staking, Prediction Markets, OHM-style Tokenomics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
