[package]
name = "idl-stableswap"
version = "0.1.0"
description = "StableCurve AMM for IDL Token Swap (BAGS <-> PUMP)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl_stableswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(feature, values(\"anchor-debug\"))"] }

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true
